@@ -343,9 +343,9 @@ public class ImageUtil
     	int exit=0;
     	File dir = new File(outdir);
     	String evn[] = {"--convert-to","pdf:writer_pdf_Export","--outdir",outdir,filename};
-    	//ProcessBuilder pb = new ProcessBuilder("lowriter",env,dir);
-    	//pb.redirectErrorStream(true);
-        p = Runtime.getRuntime().exec("lowriter",evn,dir);
+    	ProcessBuilder pb = new ProcessBuilder("cd "+outdir+" && lowriter","--convert-to","pdf:writer_pdf_Export","--outdir",outdir,filename);
+    	pb.redirectErrorStream(true);
+        p =pb.start(); //Runtime.getRuntime().exec("lowriter",evn,dir);
 
 
         BufferedReader br = new BufferedReader(
